tests/checker/fail/literal_dispatch_duplicate.can
route = (String) => String {
    String -> (
        * "/a" => String { "a" }
        * "/a" => String { "again" }
        * String => String { "other" }
    )
}

Unit => Program {
    "/a".route().print()
}
